@@ -1454,6 +1454,23 @@
       </properties>
     </profile>
     <profile>
+      <id>java26</id>
+      <activation>
+        <jdk>26</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>-XX:+EnableDynamicAgentLoading
+          --enable-native-access=ALL-UNNAMED --add-exports
+          java.base/sun.nio.ch=ALL-UNNAMED
+          --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens
+          java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <jdk.src.version>21</jdk.src.version>
+        <jdk.target.version>21</jdk.target.version>
+        <forbiddenapis.skip>true</forbiddenapis.skip>
+      </properties>
+    </profile>
+    <profile>
       <id>release-site</id>
       <activation>
         <property>
